Fixed broken styles

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,7 @@ body {
 .intro--content {
   background: url("./assets/intro-blob-lemon.png") right top no-repeat, url("./assets/intro-blob-baby.png") left bottom no-repeat;
   height: 100%;
+  width: 100%;
   color: #293264;
   display: flex;
   flex-direction: column;
@@ -57,8 +58,8 @@ body {
 }
 
 .quiz--content {
-  /* height: 100vh; */
-  /* width: 100%; */
+  height: 100%;
+  width: 90%;
   padding: 40px 75px 0;
   background: url("./assets/quiz-blob-lemon.png") right top no-repeat, url("./assets/quiz-blob-baby.png") left bottom no-repeat;
 }
@@ -79,13 +80,13 @@ body {
 
 .quiz--button {
   font-weight: 600;
-  font-size: 10px;
+  font-size: 0.75em;
   color: #F5F7FB;
   background-color: #4D5B9E;
   border-radius: 10px;
   border: none;
-  width: 120px;
-  height: 35px;
+  min-width: 120px;
+  min-height: 35px;
   padding: 11px 21px;
   cursor: pointer;
 }
@@ -93,7 +94,7 @@ body {
 .question--question {
   font-family: 'Karla', sans-serif;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1.4em;
   color: #293264;
   margin-top: 0;
 }
@@ -108,12 +109,15 @@ body {
   border: 1px solid #4D5B9E;
   color: #293264;
   font-weight: 500;
-  font-size: 10px;
-  padding: 4px 8px;
+  font-size: 0.8em;
+  padding: 6px 10px;
   min-width: 66px;
-  text-align: center;
   cursor: pointer;
   user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 hr {
